--- a/core/webApp/index.html
+++ b/core/webApp/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>web-app</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <title>youShakespeare</title>
   </head>
   <body>
     <div id="app"></div>
